Inventory Features initiated